Add SOLAS, OSHA, LOTO

--- a/Scrivener/IME.scriv/Settings/ui.plist
+++ b/Scrivener/IME.scriv/Settings/ui.plist
@@ -8,7 +8,7 @@
 	<dict>
 		<key>2655DDF6-4AB8-42CB-A433-1CD76FC351D2</key>
 		<array>
-			<string>5883F49B-922A-44FC-9A12-8947AB5363F7</string>
+			<string>0B196510-70ED-4FF5-8586-2F113DAC798D</string>
 		</array>
 	</dict>
 	<key>CommentsScaleFactor</key>
@@ -1306,6 +1306,11 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>7B72A900-9796-41AE-A7D7-C1E38D1349E0</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>7BF501A8-3921-42FE-8873-3D8DC5DEB96C</key>
 		<dict>
 			<key>Row</key>
@@ -1522,6 +1527,11 @@
 			<integer>-1</integer>
 		</dict>
 		<key>9376B1BD-1C1D-4734-9B51-A354A71D43B7</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>93FFE8C7-2CC7-4A13-AA36-AF03BB078BE0</key>
 		<dict>
 			<key>Row</key>
 			<integer>-1</integer>
@@ -2376,6 +2386,11 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>E21C7AC5-6DB9-4370-8618-6389ACC50514</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>E44C599A-E915-4C1D-99D2-976498ABDE15</key>
 		<dict>
 			<key>Row</key>
@@ -2611,7 +2626,7 @@
 	<true/>
 	<key>collectionSelectionAutosaveName</key>
 	<array>
-		<integer>2</integer>
+		<integer>0</integer>
 	</array>
 	<key>collectionsHeight</key>
 	<real>118</real>
@@ -2742,7 +2757,7 @@
 	<key>mainDocumentEditor.textMode</key>
 	<integer>0</integer>
 	<key>mainWindowFrame</key>
-	<string>287 278 1583 702 0 0 1920 1055 </string>
+	<string>182 314 1583 702 0 0 1920 1055 </string>
 	<key>projectStatsSheet</key>
 	<dict>
 		<key>excludeAnnots</key>
@@ -2775,7 +2790,7 @@
 		<key>widths</key>
 		<dict>
 			<key>TITLE</key>
-			<real>200</real>
+			<real>480</real>
 		</dict>
 	</dict>
 	<key>selectedCollectionTabIndex</key>
