--- a/Scrivener/IME.scriv/Settings/ui.plist
+++ b/Scrivener/IME.scriv/Settings/ui.plist
@@ -1033,6 +1033,11 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>492C6D46-88DD-47E2-B891-99D82616B6BD</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>496211BF-4C84-48E1-8916-D05C55A7B976</key>
 		<dict>
 			<key>Row</key>
@@ -3278,7 +3283,7 @@
 	<key>mainDocumentEditor.rulerIsVisible</key>
 	<false/>
 	<key>mainDocumentEditor.scrollRect</key>
-	<string>{{0, 0}, {756, 556}}</string>
+	<string>{{0, 1163.5}, {620, 588}}</string>
 	<key>mainDocumentEditor.selectedRanges</key>
 	<string>{0, 0}</string>
 	<key>mainDocumentEditor.textEditorState</key>
@@ -3289,7 +3294,7 @@
 	<key>mainDocumentEditor.textMode</key>
 	<integer>0</integer>
 	<key>mainWindowFrame</key>
-	<string>93 353 1512 702 0 0 1920 1055 </string>
+	<string>102 533 1512 702 0 0 2240 1235 </string>
 	<key>projectStatsSheet</key>
 	<dict>
 		<key>excludeAnnots</key>
