--- a/.gitignore
+++ b/.gitignore
@@ -2,18 +2,21 @@
 # ensure this file is tracked
 !.gitignore
 
-# don't track unpublished builds
+# don't track unpublished builds or stage
 output
 
 # don't track assets generated from source
 generated-assets
+
+# don't track the executables.ptx file
+executables.ptx
 
 # don't track node packages
 node_modules
 
 # don't track error logs
 .error_schema.log
-cli.log
+logs
 
 # don't track OS related files (windows/macos/linux)
 .DS_Store
