--- a/Scrivener/IME.scriv/Settings/ui.plist
+++ b/Scrivener/IME.scriv/Settings/ui.plist
@@ -2258,6 +2258,11 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>B1AD5569-C212-4D62-9CF8-B836B7F344D2</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>B1B9B5F5-533D-4A72-AB07-27290A66A16E</key>
 		<dict>
 			<key>Row</key>
@@ -3329,7 +3334,7 @@
 	<key>mainDocumentEditor.textMode</key>
 	<integer>0</integer>
 	<key>mainWindowFrame</key>
-	<string>408 178 1512 702 0 0 1920 1055 </string>
+	<string>112 178 1512 702 0 0 1920 1055 </string>
 	<key>projectStatsSheet</key>
 	<dict>
 		<key>excludeAnnots</key>
