--- a/Scrivener/IME.scriv/Settings/ui.plist
+++ b/Scrivener/IME.scriv/Settings/ui.plist
@@ -91,8 +91,8 @@
 	</array>
 	<key>binderSplitFrames</key>
 	<array>
-		<string>{{0, 0}, {512, 674}}</string>
-		<string>{{513, 0}, {999, 674}}</string>
+		<string>{{0, 0}, {488, 729}}</string>
+		<string>{{489, 0}, {848, 729}}</string>
 	</array>
 	<key>binderState</key>
 	<array>
@@ -247,6 +247,11 @@
 			<integer>-1</integer>
 		</dict>
 		<key>0D67A96B-1BF5-4948-BB9A-825975916906</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>0E7A06E3-B01F-4DB1-9547-0C6DB2126DB7</key>
 		<dict>
 			<key>Row</key>
 			<integer>-1</integer>
@@ -408,6 +413,11 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>16EE02C8-3C4E-4722-AC9D-FC02A78D7C69</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>1712D062-7169-42DB-B312-64BA4BE461A9</key>
 		<dict>
 			<key>Row</key>
@@ -539,6 +549,11 @@
 			<integer>-1</integer>
 		</dict>
 		<key>21A6FB56-2D8C-4FC5-BA53-7FA658186E65</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>22A80BC7-D75F-4AD2-B4F7-E8F37E4D970D</key>
 		<dict>
 			<key>Row</key>
 			<integer>-1</integer>
@@ -733,6 +748,11 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>34613D63-F917-4166-A78D-3759AACDA469</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>34A01B5C-6321-4C44-88DC-9FFE4E86F7B0</key>
 		<dict>
 			<key>Row</key>
@@ -854,6 +874,11 @@
 			<integer>-1</integer>
 		</dict>
 		<key>3F770F4B-2E9C-45FE-91DC-1F0529095F9C</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>3F7B553F-DC13-438A-BE2E-03726D2E156E</key>
 		<dict>
 			<key>Row</key>
 			<integer>-1</integer>
@@ -994,6 +1019,11 @@
 			<integer>-1</integer>
 		</dict>
 		<key>44F2A5EB-A595-4CFF-842D-7EC47D926A51</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>457FAB2C-5B38-4D56-9809-69A387B83181</key>
 		<dict>
 			<key>Row</key>
 			<integer>-1</integer>
@@ -1638,6 +1668,11 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>812627AD-9D7F-41D8-A658-E45E989CF259</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>815BC044-2586-4291-829E-F0C6DD075585</key>
 		<dict>
 			<key>Row</key>
@@ -1794,6 +1829,11 @@
 			<integer>-1</integer>
 		</dict>
 		<key>8B95DA32-19DE-465E-A4C1-1E9BBF9077CF</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>8C0995B4-B291-42E4-92C9-C7F0DCFC7B0C</key>
 		<dict>
 			<key>Row</key>
 			<integer>-1</integer>
@@ -1974,6 +2014,11 @@
 			<integer>-1</integer>
 		</dict>
 		<key>9AEACAA1-71C5-4918-A7C3-3FD12A2D9A01</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>9B0918C5-5CBB-464F-8612-FE9424CBF221</key>
 		<dict>
 			<key>Row</key>
 			<integer>-1</integer>
@@ -2444,6 +2489,11 @@
 			<integer>-1</integer>
 		</dict>
 		<key>BC9482C8-1FC6-475C-AE86-D4D9077870C5</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>BD29CBC9-4353-4359-B936-6637B5822E96</key>
 		<dict>
 			<key>Row</key>
 			<integer>-1</integer>
@@ -3083,6 +3133,11 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>F42339E0-F91D-4152-85DA-A1DA7707A26A</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>F4642D53-62A0-4C67-A233-E847014A95C0</key>
 		<dict>
 			<key>Row</key>
@@ -3254,8 +3309,8 @@
 	<integer>0</integer>
 	<key>inspectorSplitFrames</key>
 	<array>
-		<string>{{0, 0}, {771, 644}}</string>
-		<string>{{772, 0}, {227, 644}}</string>
+		<string>{{0, 0}, {620, 699}}</string>
+		<string>{{621, 0}, {227, 699}}</string>
 	</array>
 	<key>inspectorWidth</key>
 	<real>227</real>
@@ -3323,7 +3378,7 @@
 	<key>mainDocumentEditor.rulerIsVisible</key>
 	<false/>
 	<key>mainDocumentEditor.scrollRect</key>
-	<string>{{0, 353}, {756, 588}}</string>
+	<string>{{0, 28.5}, {620, 643}}</string>
 	<key>mainDocumentEditor.selectedRanges</key>
 	<string>{0, 0}</string>
 	<key>mainDocumentEditor.textEditorState</key>
@@ -3334,7 +3389,7 @@
 	<key>mainDocumentEditor.textMode</key>
 	<integer>0</integer>
 	<key>mainWindowFrame</key>
-	<string>200 331 1512 702 0 0 2240 1235 </string>
+	<string>44 90 1337 757 0 0 1440 875 </string>
 	<key>projectStatsSheet</key>
 	<dict>
 		<key>excludeAnnots</key>
@@ -3432,7 +3487,7 @@
 		<real>84</real>
 	</dict>
 	<key>supportingDocumentEditor.scrollRect</key>
-	<string>{{0, 0}, {606, 294}}</string>
+	<string>{{0, 0}, {620, 294}}</string>
 	<key>supportingDocumentEditor.selectedItemIDs</key>
 	<array/>
 	<key>supportingDocumentEditor.selectedItemUUIDs</key>
