--- a/Scrivener/ptx2scriv/PreTeXt_Shell.scriv/Settings/ui.plist
+++ b/Scrivener/ptx2scriv/PreTeXt_Shell.scriv/Settings/ui.plist
@@ -20,12 +20,22 @@
 	</array>
 	<key>bookmarksSelectionInfo</key>
 	<dict>
+		<key>3B16EB09-2479-423D-888D-0B8F5991346F</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>68F9DB8A-73A7-4E9C-9336-36748787D6CB</key>
 		<dict>
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
 		<key>81F6E3E1-2136-419A-8CAA-8F396FA99BC6</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>BA9972C2-27A5-4932-A0C8-6DD2590844F3</key>
 		<dict>
 			<key>Row</key>
 			<integer>-1</integer>
@@ -75,7 +85,7 @@
 		<real>1</real>
 	</dict>
 	<key>mainDocumentEditor.scrollRect</key>
-	<string>{{0, 0}, {620, 533}}</string>
+	<string>{{0, 14}, {620, 565}}</string>
 	<key>mainDocumentEditor.textEditorState</key>
 	<dict>
 		<key>textScaleFactor</key>
